--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,15 +12,18 @@
     <script src="script/client.js"></script>
     <title>Document</title>
 </head>
+
 <body ng-app="myApp">
-<div ng-controller="MainController as mc">
-<span ng-repeat="picture in mc.pictures" class=" col-sm-5 col-md-4">
-<div class="imgSect">
-<div class="pictureFact" ng-mouseleave="mc.picShow(picture)" ng-show="picture.showFact">{{picture.fact}}</div>
-<img ng-src="images/pic{{picture.picNum}}.jpg" ng-mouseenter="mc.picShow(picture); mc.addView(picture)" ng-show="picture.showPic">
-    </div>
-    <button class="likeBtn" type="button" ng-click="mc.addLike(picture)">Likes: {{picture.likeCounter}} Views: {{picture.viewCounter}}</button>
-</span>
+    <h1>Xong's Photo Gallery</h1>
+    <div ng-controller="MainController as mc" class="container-fluid">
+        <span ng-repeat="picture in mc.pictures" class="col-xs-4 col-sm-5 col-md-4">
+            <div class="imgSect">
+                <div class="pictureFact" ng-mouseleave="mc.picShow(picture)" ng-show="picture.showFact">{{picture.fact}}</div>
+                <img ng-src="images/pic{{picture.picNum}}.jpg" ng-mouseenter="mc.picShow(picture); mc.addView(picture)" ng-show="picture.showPic">
+            </div>
+            <button class="likeBtn" type="button" ng-click="mc.addLike(picture)">Likes: {{picture.likeCounter}} Views: {{picture.viewCounter}}</button>
+        </span>
     </div>
 </body>
+
 </html>
