--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta Content-Type: text/html; charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
@@ -16,13 +16,15 @@
 <body ng-app="myApp">
     <h1>Xong's Photo Gallery</h1>
     <div ng-controller="MainController as mc" class="container-fluid">
-        <span ng-repeat="picture in mc.pictures" class="col-xs-4 col-sm-5 col-md-4">
+        <div class="row">
+        <span ng-repeat="picture in mc.pictures" class="col-xs-4 col-sm-5 col-md-4 galSect">
             <div class="imgSect">
                 <div class="pictureFact" ng-mouseleave="mc.picShow(picture)" ng-show="picture.showFact">{{picture.fact}}</div>
                 <img ng-src="images/pic{{picture.picNum}}.jpg" ng-mouseenter="mc.picShow(picture); mc.addView(picture)" ng-show="picture.showPic">
             </div>
-            <button class="likeBtn" type="button" ng-click="mc.addLike(picture)">Likes: {{picture.likeCounter}} Views: {{picture.viewCounter}}</button>
+<button class="likeBtn" type="button" ng-click="mc.addLike(picture)"> &#128525: {{picture.likeCounter}} &#128064: {{picture.viewCounter}}</button>
         </span>
+        </div>
     </div>
 </body>
 
