--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,22 +10,33 @@
     <link rel="stylesheet" href="styles/style.css">
     <script src="vendors/angular.js"></script>
     <script src="script/client.js"></script>
-    <title>Document</title>
+    <title>Xong's Photo Gallery</title>
 </head>
 
 <body ng-app="myApp">
     <h1>Xong's Photo Gallery</h1>
-    <div ng-controller="MainController as mc" class="container-fluid">
-        <span ng-repeat="picture in mc.pictures" class="col-xs-4 col-sm-5 col-md-4 galSect">
+    <div ng-controller="MainController as mc">
+        <span ng-repeat="picture in mc.pictures" class="container col-xs-4 col-sm-5 col-md-4 galSect">
             <div class="imgSect">
                 <div class="pictureFact" ng-mouseleave="mc.picShow(picture)" ng-show="picture.showFact">{{picture.fact}}</div>
                 <img ng-src="images/pic{{picture.picNum}}.jpg" ng-mouseenter="mc.picShow(picture); mc.addView(picture)" ng-show="picture.showPic">
             </div>
-<button class="likeBtn btn-primary" type="button" ng-click="mc.addLike(picture)">Love This!</button>
-<div class="stats">&#128525: {{picture.likeCounter}} &#128064: {{picture.viewCounter}}</div>
+            <button class="likeBtn btn-primary" type="button" ng-click="mc.addLike(picture)">Love This!</button>
+            <div class="stats">
+                &#128525: {{picture.likeCounter}} &#128064: {{picture.viewCounter}}
+            </div>
+            <button class="likeBtn btn-primary" type="button" ng-click="mc.showComment(picture)">Comments</button>
+            <div ng-show="picture.showComm">
+                <form>
+                    <input type="text" placeholder="Enter Comment">
+                </form>
+                <div class="picComment" ng-repeat="comment in picture.comment">
+                    {{comment}}
+                </div>
+            </div>
         </span>
-        
     </div>
+
 </body>
 
 </html>
